# godot-rapier2d

./: .gitignore  DOCUMENTATION.md  README.md  SConstruct  build.bat
.github/workflows/: android_builds.yml  ios_builds.yml  linux_builds.yml  macos_builds.yml  web_builds.yml  windows_builds.yml
src/: rapier_area_2d.cpp  rapier_body_2d.cpp  rapier_body_2d.h  rapier_body_utils_2d.cpp  rapier_body_utils_2d.h  rapier_collision_object_2d.cpp  rapier_collision_object_2d.h  rapier_joints_2d.cpp  rapier_project_settings.cpp  rapier_project_settings.h  rapier_space_2d.cpp  register_types.cpp
src/bodies/: rapier_area_2d.cpp  rapier_body_2d.cpp  rapier_body_direct_state_2d.cpp  rapier_collision_object_2d.h
src/joints/: rapier_damped_spring_joint_2d.cpp  rapier_damped_spring_joint_2d.h  rapier_groove_joint_2d.cpp  rapier_groove_joint_2d.h  rapier_joint_2d.cpp  rapier_joint_2d.h  rapier_pin_joint_2d.cpp  rapier_pin_joint_2d.h
src/rapier2d-wrapper/: Cargo.toml  cbindgen.toml
src/rapier2d-wrapper/includes/: rapier2d_wrapper.h
src/rapier2d-wrapper/src/: collider.rs  lib.rs  physics_world.rs  query.rs  settings.rs  shape.rs  vector.rs
src/servers/: rapier_physics_server_2d.cpp  rapier_physics_server_2d.h  rapier_project_settings.cpp
src/shapes/: rapier_capsule_shape_2d.cpp  rapier_segment_shape_2d.cpp  rapier_separation_ray_shape_2d.h  rapier_shape_2d.cpp  rapier_shape_2d.h  rapier_world_boundary_shape_2d.cpp
src/spaces/: rapier_direct_space_2d.cpp  rapier_direct_space_2d.h  rapier_direct_space_state_2d.cpp  rapier_direct_space_state_2d.h  rapier_space_2d.cpp  (+1 more)
