[package]
name = "rapier2d-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rapier2d_wrapper"
crate-type = ["staticlib"]	# Creates static lib

[dependencies]
#rapier2d = { features = [ "simd-stable"] }
rapier2d = {git = "https://github.com/appsinacup/rapier", branch = "possible-fix-for-contacts", features = ["simd-stable"]}
lazy_static = "1.4.0"

[profile.release]
codegen-units = 1
lto = "fat"
